@startuml

title Triptop Component Class Diagram

interface EatsServicePort {
  + getRestaurantData()
}

interface EatsAdapterPort {
  + fetchRestaurantData()
  + sendRequest()
  + receiveResponse()
}

interface RetrieveDataStrategy {
   + retrieveData()
}

class RetrieveFromCacheStrategy implements RetrieveDataStrategy {
    - EatsRepositoryPort eatsRepository
    - EatsAdapterPort eatsAdapter
    + retrieveData()
}

class RetrieveFromAPIStrategy implements RetrieveDataStrategy {
    - EatsAdapterPort eatsAdapter
    + retrieveData()
}

class EatsService implements EatsServicePort {
  + getRestaurantData()
  - handleFallbackScenario()
}

interface EatsRepositoryPort {
  + storeInCache(data)
  + retrieveFromCache()
  + checkCacheAvailability()
}

class EatsRepository implements EatsRepositoryPort {
  - RedisClient redisClient
  + storeInCache(data)
  + retrieveFromCache()
  + checkCacheAvailability()
}

class EatsAdapter implements EatsAdapterPort {
  + fetchRestaurantData()
  + sendRequest()
  + receiveResponse()
}

class EatsController {
  - EatsServicePort eatsService
  + processRestaurantRequest(details)
  + sendResultToApiGateway()
}

Exception EatsFallbackException {
}

EatsController --> EatsServicePort
EatsService --> RetrieveDataStrategy
EatsService --> EatsFallbackException
RetrieveFromCacheStrategy --> EatsRepositoryPort
RetrieveFromCacheStrategy --> EatsAdapterPort
RetrieveFromAPIStrategy --> EatsAdapterPort

@enduml
